# ros2_bag_recorder

./: package.xml  readme.md  setup.py
config/: default_config.yaml
launch/: recording_manager.launch.py
ros2_bag_recorder/: __init__.py  recording_manager.py  recording_node.py
